Fix missing gap between header and content on mobile

--- a/app/assets/stylesheets/mediaqueries/_s.scss
+++ b/app/assets/stylesheets/mediaqueries/_s.scss
@@ -402,6 +402,10 @@
 
   .wrapper-inner {
     padding: 0 15px;
+
+    .content-main > & {
+      padding: 15px;
+    }
   }
 
   .main-search__advanced-filter--within-content-main {
